--- a/tutorials/i_linear_response.ipynb
+++ b/tutorials/i_linear_response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20bc4a4a",
+   "id": "46c29207",
    "metadata": {},
    "source": [
     "# Linear response\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ceb497",
+   "id": "25c17f93",
    "metadata": {},
    "source": [
     "We will calculate the optical absorption in the RPA and compare it to TD simulations with a weak external field."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df941e57",
+   "id": "629136d5",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e366910",
+   "id": "f9746fb9",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a small triangle such that the required simulation time stays in the seconds range."
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe9fdca4",
+   "id": "fa7a3044",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:22.934081Z",
-     "iopub.status.busy": "2024-04-30T12:40:22.933885Z",
-     "iopub.status.idle": "2024-04-30T12:40:27.612417Z",
-     "shell.execute_reply": "2024-04-30T12:40:27.611804Z"
+     "iopub.execute_input": "2024-05-01T17:29:43.009532Z",
+     "iopub.status.busy": "2024-05-01T17:29:43.009335Z",
+     "iopub.status.idle": "2024-05-01T17:29:47.642669Z",
+     "shell.execute_reply": "2024-05-01T17:29:47.642039Z"
     },
     "lines_to_next_cell": 2
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd50421",
+   "id": "9da3bf63",
    "metadata": {},
    "source": [
     "We obtain the polarizability for an external $x$ polarized field and from its imaginary part the absorption."
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ed12325",
+   "id": "272fd864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:27.615524Z",
-     "iopub.status.busy": "2024-04-30T12:40:27.615042Z",
-     "iopub.status.idle": "2024-04-30T12:40:34.343156Z",
-     "shell.execute_reply": "2024-04-30T12:40:34.342485Z"
+     "iopub.execute_input": "2024-05-01T17:29:47.645526Z",
+     "iopub.status.busy": "2024-05-01T17:29:47.645102Z",
+     "iopub.status.idle": "2024-05-01T17:29:54.280272Z",
+     "shell.execute_reply": "2024-05-01T17:29:54.279525Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb9855a",
+   "id": "94a1a75f",
    "metadata": {},
    "source": [
     "## TD"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d0969c6",
+   "id": "b9660495",
    "metadata": {},
    "source": [
     "For the TD simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
@@ -109,13 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "29faeaa8",
+   "id": "5ee878a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:34.347930Z",
-     "iopub.status.busy": "2024-04-30T12:40:34.346656Z",
-     "iopub.status.idle": "2024-04-30T12:40:34.393859Z",
-     "shell.execute_reply": "2024-04-30T12:40:34.393316Z"
+     "iopub.execute_input": "2024-05-01T17:29:54.285122Z",
+     "iopub.status.busy": "2024-05-01T17:29:54.284025Z",
+     "iopub.status.idle": "2024-05-01T17:29:54.328513Z",
+     "shell.execute_reply": "2024-05-01T17:29:54.327956Z"
     }
    },
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe4f5e5",
+   "id": "ad6fc6bc",
    "metadata": {},
    "source": [
     "We then compute the TD dipole moment and Fourier transform it."
@@ -137,16 +137,24 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ecd2f004",
+   "id": "add990e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:34.396666Z",
-     "iopub.status.busy": "2024-04-30T12:40:34.396256Z",
-     "iopub.status.idle": "2024-04-30T12:40:36.446280Z",
-     "shell.execute_reply": "2024-04-30T12:40:36.445578Z"
+     "iopub.execute_input": "2024-05-01T17:29:54.331192Z",
+     "iopub.status.busy": "2024-05-01T17:29:54.330805Z",
+     "iopub.status.idle": "2024-05-01T17:29:56.646997Z",
+     "shell.execute_reply": "2024-05-01T17:29:56.646475Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RHS compiled\n"
+     ]
+    }
+   ],
    "source": [
     "omegas, dipole_omega, pulse_omega =  flake.get_expectation_value_frequency_domain(\n",
     "        operator=flake.dipole_operator,  # the dipole moment is the expectation value of the dipole operator\n",
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afebdfc9",
+   "id": "7870d79f",
    "metadata": {},
    "source": [
     "The polarizability is given by $p / E$ (we only take the $x$ - component)."
@@ -171,13 +179,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d585b53",
+   "id": "d44a2db9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:36.449351Z",
-     "iopub.status.busy": "2024-04-30T12:40:36.448800Z",
-     "iopub.status.idle": "2024-04-30T12:40:36.536857Z",
-     "shell.execute_reply": "2024-04-30T12:40:36.536326Z"
+     "iopub.execute_input": "2024-05-01T17:29:56.649801Z",
+     "iopub.status.busy": "2024-05-01T17:29:56.649411Z",
+     "iopub.status.idle": "2024-05-01T17:29:56.737946Z",
+     "shell.execute_reply": "2024-05-01T17:29:56.737425Z"
     }
    },
    "outputs": [],
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9e6e8af",
+   "id": "473830af",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -196,13 +204,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c454b4d",
+   "id": "076c0e3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-30T12:40:36.539734Z",
-     "iopub.status.busy": "2024-04-30T12:40:36.539337Z",
-     "iopub.status.idle": "2024-04-30T12:40:37.033517Z",
-     "shell.execute_reply": "2024-04-30T12:40:37.032766Z"
+     "iopub.execute_input": "2024-05-01T17:29:56.740653Z",
+     "iopub.status.busy": "2024-05-01T17:29:56.740272Z",
+     "iopub.status.idle": "2024-05-01T17:29:57.176378Z",
+     "shell.execute_reply": "2024-05-01T17:29:57.175710Z"
     },
     "lines_to_next_cell": 0
    },
@@ -235,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26a6a66e",
+   "id": "5b012ddb",
    "metadata": {},
    "outputs": [],
    "source": []
