deploy: 75f1b107131d43c597f802accc65a7b900fd285c

--- a/tutorials/xyz.ipynb
+++ b/tutorials/xyz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c6c10d4",
+   "id": "643366cc",
    "metadata": {},
    "source": [
     "# Exporting and Importing\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5acd12a4",
+   "id": "98ebd8e0",
    "metadata": {},
    "source": [
     "GRANAD lets you save orbitals to xyz files. It also offers rudimentary support for loading orbitals from xyz files. For demonstration, we will create a triangular flake, print its xyz representation, save it to file and reload it."
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a25ed3b",
+   "id": "453f6c12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:42:45.040564Z",
-     "iopub.status.busy": "2024-05-02T11:42:45.040361Z",
-     "iopub.status.idle": "2024-05-02T11:42:50.195819Z",
-     "shell.execute_reply": "2024-05-02T11:42:50.195091Z"
+     "iopub.execute_input": "2024-05-06T14:31:07.869329Z",
+     "iopub.status.busy": "2024-05-06T14:31:07.869117Z",
+     "iopub.status.idle": "2024-05-06T14:31:13.315922Z",
+     "shell.execute_reply": "2024-05-06T14:31:13.315045Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5986ef87",
+   "id": "fd4f1cfd",
    "metadata": {},
    "source": [
     "We can look at only the atoms in this file. They are given as a dictionary. The type of atom is the key. The value is all positions where atoms of this type are."
@@ -46,13 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7949e8bf",
+   "id": "64f78687",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:42:50.199046Z",
-     "iopub.status.busy": "2024-05-02T11:42:50.198441Z",
-     "iopub.status.idle": "2024-05-02T11:42:50.217604Z",
-     "shell.execute_reply": "2024-05-02T11:42:50.216919Z"
+     "iopub.execute_input": "2024-05-06T14:31:13.319083Z",
+     "iopub.status.busy": "2024-05-06T14:31:13.318687Z",
+     "iopub.status.idle": "2024-05-06T14:31:13.339005Z",
+     "shell.execute_reply": "2024-05-06T14:31:13.338372Z"
     }
    },
    "outputs": [
@@ -65,22 +65,27 @@
     }
    ],
    "source": [
-    "print(flake.atoms)\n",
-    "# \n",
-    "\n",
-    "# If you supply no name to the to_xyz method, it will just return the string"
+    "print(flake.atoms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb6df7cd",
+   "metadata": {},
+   "source": [
+    "If you supply no name to the to_xyz method, it will just return the string"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04ed36ea",
+   "id": "81d1f88c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:42:50.220187Z",
-     "iopub.status.busy": "2024-05-02T11:42:50.219788Z",
-     "iopub.status.idle": "2024-05-02T11:42:50.225450Z",
-     "shell.execute_reply": "2024-05-02T11:42:50.224953Z"
+     "iopub.execute_input": "2024-05-06T14:31:13.341643Z",
+     "iopub.status.busy": "2024-05-06T14:31:13.341248Z",
+     "iopub.status.idle": "2024-05-06T14:31:13.347058Z",
+     "shell.execute_reply": "2024-05-06T14:31:13.346563Z"
     }
    },
    "outputs": [
@@ -126,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9bed0f",
+   "id": "216224b4",
    "metadata": {},
    "source": [
     "If you want to save this to a file, do"
@@ -135,13 +140,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0f898590",
+   "id": "11821583",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:42:50.228020Z",
-     "iopub.status.busy": "2024-05-02T11:42:50.227542Z",
-     "iopub.status.idle": "2024-05-02T11:42:50.232638Z",
-     "shell.execute_reply": "2024-05-02T11:42:50.232179Z"
+     "iopub.execute_input": "2024-05-06T14:31:13.349568Z",
+     "iopub.status.busy": "2024-05-06T14:31:13.349189Z",
+     "iopub.status.idle": "2024-05-06T14:31:13.354701Z",
+     "shell.execute_reply": "2024-05-06T14:31:13.354216Z"
     }
    },
    "outputs": [],
@@ -151,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01512aa5",
+   "id": "2269c085",
    "metadata": {},
    "source": [
     "You can also reload, although this is limited: all atoms in the xyz file get the same group id by default."
@@ -160,29 +165,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "972b837e",
+   "id": "c1a7fe63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:42:50.234971Z",
-     "iopub.status.busy": "2024-05-02T11:42:50.234646Z",
-     "iopub.status.idle": "2024-05-02T11:42:50.244158Z",
-     "shell.execute_reply": "2024-05-02T11:42:50.243705Z"
-    },
-    "lines_to_next_cell": 0
+     "iopub.execute_input": "2024-05-06T14:31:13.357318Z",
+     "iopub.status.busy": "2024-05-06T14:31:13.356944Z",
+     "iopub.status.idle": "2024-05-06T14:31:13.367061Z",
+     "shell.execute_reply": "2024-05-06T14:31:13.366503Z"
+    }
    },
    "outputs": [],
    "source": [
     "new_flake = OrbitalList.from_xyz('flake.xyz')\n",
     "assert new_flake.atoms == flake.atoms"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04c30056",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
