--- a/tutorials/j_defining_materials.ipynb
+++ b/tutorials/j_defining_materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "373282c8",
+   "id": "b27a46cb",
    "metadata": {},
    "source": [
     "# Defining Materials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b5a58e",
+   "id": "390e9ad1",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5d91844e",
+   "id": "1d1ec130",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:48.108569Z",
-     "iopub.status.busy": "2024-05-02T11:41:48.108120Z",
-     "iopub.status.idle": "2024-05-02T11:41:49.341168Z",
-     "shell.execute_reply": "2024-05-02T11:41:49.340521Z"
+     "iopub.execute_input": "2024-05-06T14:30:18.138097Z",
+     "iopub.status.busy": "2024-05-06T14:30:18.137905Z",
+     "iopub.status.idle": "2024-05-06T14:30:19.289650Z",
+     "shell.execute_reply": "2024-05-06T14:30:19.289019Z"
     }
    },
    "outputs": [
@@ -50,7 +50,7 @@
       "                                      as a dictionary containing the orbital's position and an optional tag\n",
       "                                      for further identification.\n",
       "        interactions (defaultdict[dict]): Describes the interactions between orbitals within the material.\n",
-      "                                         Each interaction is categorized by type (e.g., 'hopping', 'Coulomb'),\n",
+      "                                         Each interaction is categorized by type (e.g., 'hamiltonian', 'Coulomb'),\n",
       "                                         and includes the participants, parameters like \n",
       "                                         [onsite, offsite_nearest_neighbor, offsite_next_to_nearest_neighbor, ...], and                                         \n",
       "                                         an optional mathematical expression defining the interaction for the coupling beyound \n",
@@ -59,7 +59,7 @@
       "    Usage:\n",
       "        The `Material` class is used to define a material's structure and properties step-by-step.\n",
       "        An example is constructing the material graphene, with specific lattice properties,\n",
-      "        orbitals corresponding to carbon's p_z orbitals, and defining hopping and Coulomb interactions\n",
+      "        orbitals corresponding to carbon's p_z orbitals, and defining hamiltonian and Coulomb interactions\n",
       "        among these orbitals. \n",
       "\n",
       "    Example:\n",
@@ -74,7 +74,7 @@
       "            .add_orbital(position=(0, 0), tag=\"sublattice_1\", species=\"pz\")\n",
       "            .add_orbital(position=(-1/3, -2/3), tag=\"sublattice_2\", species=\"pz\")\n",
       "            .add_interaction(\n",
-      "                \"hopping\",\n",
+      "                \"hamiltonian\",\n",
       "                participants=(\"pz\", \"pz\"),\n",
       "                parameters=[0.0, 2.66], # no expression given => we online look at onsite and nearest neighbors\n",
       "            )\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07715322",
+   "id": "47edaf1c",
    "metadata": {},
    "source": [
     "So, the Material class essentially defines a small language we can use to specify a material. The Hubbard model would look like this"
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e393505f",
+   "id": "12b60967",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:49.343952Z",
-     "iopub.status.busy": "2024-05-02T11:41:49.343492Z",
-     "iopub.status.idle": "2024-05-02T11:41:49.359966Z",
-     "shell.execute_reply": "2024-05-02T11:41:49.359417Z"
+     "iopub.execute_input": "2024-05-06T14:30:19.292435Z",
+     "iopub.status.busy": "2024-05-06T14:30:19.291992Z",
+     "iopub.status.idle": "2024-05-06T14:30:19.305609Z",
+     "shell.execute_reply": "2024-05-06T14:30:19.305039Z"
     }
    },
    "outputs": [],
@@ -131,12 +131,12 @@
     "    .add_orbital(position=(0, 0, 0), species = \"up\")\n",
     "    .add_orbital(position=(0, 0, 0), species = \"down\")   \n",
     "    .add_interaction(\n",
-    "        \"hopping\",\n",
+    "        \"hamiltonian\",\n",
     "        participants=(\"up\", \"up\"),\n",
     "        parameters=[0.0, t],\n",
     "    )\n",
     "    .add_interaction(\n",
-    "        \"hopping\",\n",
+    "        \"hamiltonian\",\n",
     "        participants=(\"down\", \"down\"),\n",
     "        parameters=[0.0, t],\n",
     "    )\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64c04374",
+   "id": "4eaca7f2",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ad0143ea",
+   "id": "75fc9518",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:49.362764Z",
-     "iopub.status.busy": "2024-05-02T11:41:49.362397Z",
-     "iopub.status.idle": "2024-05-02T11:41:49.366448Z",
-     "shell.execute_reply": "2024-05-02T11:41:49.365806Z"
+     "iopub.execute_input": "2024-05-06T14:30:19.308304Z",
+     "iopub.status.busy": "2024-05-06T14:30:19.307848Z",
+     "iopub.status.idle": "2024-05-06T14:30:19.311539Z",
+     "shell.execute_reply": "2024-05-06T14:30:19.310997Z"
     }
    },
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35507982",
+   "id": "3660b7e0",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -209,13 +209,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3845aa3b",
+   "id": "13bda7f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:49.368986Z",
-     "iopub.status.busy": "2024-05-02T11:41:49.368621Z",
-     "iopub.status.idle": "2024-05-02T11:41:49.372362Z",
-     "shell.execute_reply": "2024-05-02T11:41:49.371753Z"
+     "iopub.execute_input": "2024-05-06T14:30:19.313857Z",
+     "iopub.status.busy": "2024-05-06T14:30:19.313511Z",
+     "iopub.status.idle": "2024-05-06T14:30:19.317155Z",
+     "shell.execute_reply": "2024-05-06T14:30:19.316499Z"
     }
    },
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "842663f3",
+   "id": "e7c94b94",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -265,13 +265,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9b817593",
+   "id": "4706d0ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:49.374765Z",
-     "iopub.status.busy": "2024-05-02T11:41:49.374395Z",
-     "iopub.status.idle": "2024-05-02T11:41:51.218516Z",
-     "shell.execute_reply": "2024-05-02T11:41:51.217889Z"
+     "iopub.execute_input": "2024-05-06T14:30:19.319442Z",
+     "iopub.status.busy": "2024-05-06T14:30:19.319079Z",
+     "iopub.status.idle": "2024-05-06T14:30:20.913016Z",
+     "shell.execute_reply": "2024-05-06T14:30:20.912364Z"
     }
    },
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63aecd75",
+   "id": "40a336b2",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf313a9a",
+   "id": "a5fa8c30",
    "metadata": {},
    "source": [
     "You can just copy the material you want to modify and change/override its attributes. As an example, we will turn our ordinary graphene model into a variant of the Haldane model by introducing complex nnn hoppings"
@@ -317,13 +317,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0c4ee46",
+   "id": "d3c78c73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:51.221881Z",
-     "iopub.status.busy": "2024-05-02T11:41:51.221551Z",
-     "iopub.status.idle": "2024-05-02T11:41:51.242520Z",
-     "shell.execute_reply": "2024-05-02T11:41:51.241825Z"
+     "iopub.execute_input": "2024-05-06T14:30:20.916046Z",
+     "iopub.status.busy": "2024-05-06T14:30:20.915725Z",
+     "iopub.status.idle": "2024-05-06T14:30:20.937245Z",
+     "shell.execute_reply": "2024-05-06T14:30:20.936595Z"
     }
    },
    "outputs": [
@@ -333,7 +333,8 @@
      "text": [
       "Material: graphene\n",
       "  Lattice Constant: 2.46 Å\n",
-      "  Lattice Basis: [[ 1.         0.         0.       ]\n",
+      "  Lattice Basis: \n",
+      "[[ 1.         0.         0.       ]\n",
       " [-0.5        0.8660254  0.       ]]\n",
       "  Orbital Species:\n",
       "    pz characterized by (n,l,m,s, atom name) = (0, 1, 0, 0, 'C')\n",
@@ -341,8 +342,12 @@
       "    Position: (0, 0), Tag: sublattice_1, Species: pz\n",
       "    Position: (-0.3333333333333333, -0.6666666666666666), Tag: sublattice_2, Species: pz\n",
       "  Interactions:\n",
-      "    Type: hopping, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([0, 1.0, 0.1j], <function Material.add_interaction.<locals>.<lambda> at 0x7fa520389300>)\n",
-      "    Type: coulomb, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([16.522, 8.64, 5.333], <function Material.add_interaction.<locals>.<lambda> at 0x7fa522d0ede0>)\n",
+      "   Type: hamiltonian, Participants: ('pz', 'pz'):\n",
+      "                    NN Couplings: 0, 1.0, 0.1j\n",
+      "                    Other neighbors: Zero coupling\n",
+      "   Type: coulomb, Participants: ('pz', 'pz'):\n",
+      "                    NN Couplings: 16.522, 8.64, 5.333\n",
+      "                    Other neighbors: Coupling with a (regularized) Coulomb-like potential\n",
       "\n"
      ]
     }
@@ -351,13 +356,13 @@
     "from copy import deepcopy\n",
     "graphene  = MaterialCatalog.get(\"graphene\")\n",
     "graphene_haldane = deepcopy(graphene)\n",
-    "graphene_haldane.add_interaction(\"hopping\", participants = ('pz', 'pz'), parameters = [0, 1.0, 1j*0.1])\n",
+    "graphene_haldane.add_interaction(\"hamiltonian\", participants = ('pz', 'pz'), parameters = [0, 1.0, 1j*0.1])\n",
     "print(graphene_haldane)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f92a4c16",
+   "id": "b6ce4599",
    "metadata": {},
    "source": [
     "The Haldane model breaks inversion symmetry explicity by a staggered onsite potential. There is no (nice) way to achieve this with a few modifications from the normal graphene model, so we simply use the versatile properties of the orbital list datatype when we cut finite flakes"
@@ -366,13 +371,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "33ec34b2",
+   "id": "34ae2d3d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:51.245751Z",
-     "iopub.status.busy": "2024-05-02T11:41:51.245408Z",
-     "iopub.status.idle": "2024-05-02T11:41:55.971813Z",
-     "shell.execute_reply": "2024-05-02T11:41:55.971255Z"
+     "iopub.execute_input": "2024-05-06T14:30:20.940390Z",
+     "iopub.status.busy": "2024-05-06T14:30:20.940108Z",
+     "iopub.status.idle": "2024-05-06T14:30:25.192580Z",
+     "shell.execute_reply": "2024-05-06T14:30:25.192040Z"
     }
    },
    "outputs": [
@@ -397,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ca11a75",
+   "id": "bcd483f8",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -406,13 +411,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8bf617b3",
+   "id": "f7fb5af7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:55.974869Z",
-     "iopub.status.busy": "2024-05-02T11:41:55.974265Z",
-     "iopub.status.idle": "2024-05-02T11:41:59.709571Z",
-     "shell.execute_reply": "2024-05-02T11:41:59.708822Z"
+     "iopub.execute_input": "2024-05-06T14:30:25.195365Z",
+     "iopub.status.busy": "2024-05-06T14:30:25.194987Z",
+     "iopub.status.idle": "2024-05-06T14:30:28.691775Z",
+     "shell.execute_reply": "2024-05-06T14:30:28.691167Z"
     },
     "lines_to_next_cell": 2
    },
@@ -431,12 +436,12 @@
    "source": [
     "import jax.numpy as jnp\n",
     "idx = jnp.argwhere(jnp.abs(flake_topological.energies) < 1e-2)[0].item()\n",
-    "flake_topological.show_2d( display = flake_topological.eigenvectors[:, idx]  )"
+    "flake_topological.show_2d( display = flake_topological.eigenvectors[:, idx], scale = True  )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e9e8996e",
+   "id": "f859945d",
    "metadata": {},
    "source": [
     "## Handling non-periodic dimensions"
@@ -444,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e221d038",
+   "id": "3e39c9ee",
    "metadata": {},
    "source": [
     "Say you want to have a custom ssh chain with 2 atoms in the unit cell, but displace one of the atoms in y-direction. You do this by including a second basis vector in y-direction and give the atom you want to displace a non-vanishing y-coordinate. To not get a 2D lattice, you have to specify explicitly which direction(s) you want to be periodically repeated."
@@ -453,13 +458,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d7152a7c",
+   "id": "4b23cc6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T11:41:59.712928Z",
-     "iopub.status.busy": "2024-05-02T11:41:59.712474Z",
-     "iopub.status.idle": "2024-05-02T11:42:03.161326Z",
-     "shell.execute_reply": "2024-05-02T11:42:03.160635Z"
+     "iopub.execute_input": "2024-05-06T14:30:28.695435Z",
+     "iopub.status.busy": "2024-05-06T14:30:28.695030Z",
+     "iopub.status.idle": "2024-05-06T14:30:31.772509Z",
+     "shell.execute_reply": "2024-05-06T14:30:31.771850Z"
     },
     "lines_to_next_cell": 0
    },
@@ -498,7 +503,7 @@
     "    .add_orbital(position=(0,0), tag=\"sublattice_1\", species=\"pz\")\n",
     "    .add_orbital(position=(0.8,0.1), tag=\"sublattice_2\", species=\"pz\")\n",
     "    .add_interaction(\n",
-    "        \"hopping\",\n",
+    "        \"hamiltonian\",\n",
     "        participants=(\"pz\", \"pz\"),\n",
     "        parameters=[0.0, 1 + 0.2, 1 - 0.2],\n",
     "    )\n",
@@ -506,7 +511,7 @@
     "        \"coulomb\",\n",
     "        participants=(\"pz\", \"pz\"),\n",
     "        parameters=[16.522, 8.64, 5.333],\n",
-    "        expression=lambda d: 14.399 / d\n",
+    "        expression=lambda d: 14.399 / d + 0j\n",
     "    )\n",
     ")\n",
     "flake = _ssh_modified.cut_flake( unit_cells = 10)\n",
@@ -517,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c53b530",
+   "id": "7cb8d89c",
    "metadata": {
     "lines_to_next_cell": 2
    },
